# Reqops-agents

./: .dockerignore  .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yml  droplet.md  uplift
agent-sdk/: .gitignore  .modal-snapshot-tag  .runtime-image-tag  .runtime-snapshot-tag  CLAUDE.md  Dockerfile  EXTRA_OPTIONS_PLAN.md  README.md  docker-compose.yml  pyproject.toml
agent-sdk/benchmark/: NEW_SCENARIOS_BASELINE.md  README.md  RESULTS.md
agent-sdk/docs/: agent-sdk-architecture.excalidraw  agent-sdk-guide.html  api.md  data-model.html  rest-api.html
agent-sdk/examples/: chat.py  demo.py  resume_demo.py
agent-sdk/scripts/: bench_modal_snapshot.py  bench_recovery.py  cleanup_orphans.py  launch_server_docker.sh  launch_server_test.sh  release.sh
agent-sdk/tests/: README.md  _acp_runtimes.py  conftest.py  test_acp_error_terminates_turn.py  test_acp_invariants.py  test_acp_model_normalization.py  test_api_client.py  test_api_consistency.py  test_async_correctness.py  test_attach_recovers_with_no_volume_journal.py  test_cli_tools_install_command_shape.py  test_client_field_drift.py  test_client_streaming.py  test_credential_refresh.py  test_daytona_pre_start.py  test_daytona_runtime_path_routing.py  test_daytona_sibling_guard.py  test_daytona_status_transitional_unit.py  test_daytona_volume_fs_ops_unit.py  test_daytona_volumes.py  test_docker_port_retry.py  test_docker_runtime_path_routing.py  test_docker_volume_integration.py  test_extra_options_wire.py  test_files_edit.py  test_golden.py  test_integration.py  test_interrupt_integration.py  (+39 more)
(+1244 files in other folders)
