[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-sdk"
version = "0.1.0"
description = "Agent orchestration server + Python SDK"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "fastapi",
    "uvicorn[standard]",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.1",
    "daytona-sdk",
    "modal>=1.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sdk", "src/api"]
